--- a/src/PropertiesPanel/PropertiesPanel.css
+++ b/src/PropertiesPanel/PropertiesPanel.css
@@ -1,5 +1,5 @@
 .PropertiesPanel {
-    width: 320px;
+    width: 400px;
     background-color: #3d4b6c;
     height: 100vh;
 }
@@ -29,7 +29,7 @@
     color: #ffffff;
     font-family: Arial, sans-serif;
     padding: 12px;
-    width: 280px;
+    width: 360px;
     position: relative;
 }
 
@@ -54,44 +54,32 @@
 .padding-box {
     border: 4px solid #2a2d3a;
     border-radius: 8px;
-    margin: 27px 52px;
-    padding: 45px;
+    margin: 34px 82px;
+    padding: 56px;
     position: relative;
 }
 
-.input {
-    background-color: #1e2029;
-    border: none;
-    border-radius: 4px;
-    color: #ffffff;
-    font-size: 14px;
-    padding: 4px 8px;
-    position: absolute;
-    width: 32px;
-    text-align: center;
-}
-
 .margin.top {
-    top: -36px;
+    top: -40px;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .margin.right {
     top: 50%;
-    right: -61px;
+    right: -88px;
     transform: translateY(-50%);
 }
 
 .margin.bottom {
-    bottom: -36px;
+    bottom: -40px;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .margin.left {
     top: 50%;
-    left: -61px;
+    left: -88px;
     transform: translateY(-50%);
 }
 
@@ -120,6 +108,46 @@
 }
 
 .highlight {
-    background-color: #ffd700;
-    color: #14161f;
+    border-bottom: 2px dotted #ffd700 !important;
+}
+
+.input-group {
+    display: flex;
+    align-items: center;
+    border: 1px solid #2a2d3a;
+    border-radius: 4px;
+    overflow: hidden;
+    position: absolute;
+}
+
+.input {
+    background-color: #1e2029;
+    border: none;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 5px 6px;
+    flex: 1;
+    width: 27px;
+}
+
+.input-unit {
+    background-color: #1e2029;
+    border: none;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 0.265rem 0;
+    width: 33px;
+    text-align: center;
+}
+
+.input:focus, .input-unit:focus {
+    outline: none;
+}
+
+.input-group:focus-within {
+    border-color: #47b9dc;
+}
+
+.input-group .input-unit {
+    margin-left: -1px;
 }
